[package]
name = "bounded-taskpool"
version = "0.1.0"
edition = "2024"
description = "Bounded taskpool with backpressure"
license-file = "LICENSE"
homepage = "https://github.com/axelberardino/taskpool"
repository = "https://github.com/axelberardino/taskpool"
readme = "README.md"
keywords = ["taskpool", "pool", "joinset", "queue", "backpressure", "concurrency"]
categories = ["pool", "task", "backpressure"]

[dependencies]
thiserror = "2.0"
tokio = { version = "1.49", features = ["rt", "time", "sync"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.49", features = ["rt", "time", "macros", "sync"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
doc_link_with_quotes = "warn"
doc_markdown = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

allow_attributes = "deny"
allow_attributes_without_reason = "deny"
assertions_on_result_states = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
branches_sharing_code = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
collection_is_never_read = "deny"
copy_iterator = "deny"
debug_assert_with_mut_call = "deny"
default_trait_access = "deny"
deref_by_slicing = "deny"
derive_partial_eq_without_eq = "deny"
empty_drop = "deny"
empty_enum = "deny"
enum_glob_use = "deny"
exit = "deny"
expl_impl_clone_on_copy = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
fallible_impl_from = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
from_iter_instead_of_collect = "deny"
future_not_send = "deny"
if_not_else = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
inefficient_to_string = "deny"
invalid_upcast_comparisons = "deny"
iter_not_returning_iterator = "deny"
large_digit_groups = "deny"
large_futures = "deny"
large_include_file = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
manual_assert = "deny"
manual_clamp = "deny"
manual_instant_elapsed = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
many_single_char_names = "deny"
map_err_ignore = "deny"
match_bool = "deny"
match_same_arms = "deny"
mem_forget = "deny"
mismatching_type_param_order = "deny"
missing_assert_message = "deny"
missing_const_for_fn = "deny"
must_use_candidate = "deny"
mut_mut = "deny"
naive_bytecount = "deny"
needless_bitwise_bool = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_for_each = "deny"
needless_pass_by_value = "deny"
no_effect_underscore_binding = "deny"
non_ascii_literal = "deny"
option_if_let_else = "deny"
option_option = "deny"
or_fun_call = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
ptr_as_ptr = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
ref_binding_to_reference = "deny"
ref_option_ref = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_self_not_must_use = "deny"
same_functions_in_if_condition = "deny"
semicolon_if_nothing_returned = "deny"
significant_drop_in_scrutinee = "deny"
similar_names = "deny"
single_char_lifetime_names = "deny"
string_add = "deny"
string_add_assign = "deny"
struct_excessive_bools = "deny"
suboptimal_flops = "deny"
tests_outside_test_module = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_doc = "deny"
too_many_lines = "deny"
trait_duplication_in_bounds = "deny"
transmute_ptr_to_ptr = "deny"
trivial_regex = "deny"
trivially_copy_pass_by_ref = "deny"
try_err = "deny"
unchecked_duration_subtraction = "deny"
unicode_not_nfc = "deny"
unimplemented = "deny"
unsound_collection_transmute = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_join = "deny"
unnecessary_safety_comment = "deny"
unnecessary_self_imports = "deny"
unnecessary_struct_initialization = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"
unreachable = "deny"
unreadable_literal = "deny"
unsafe_derive_deserialize = "deny"
unseparated_literal_suffix = "deny"
unused_async = "deny"
unused_peekable = "deny"
unused_rounding = "deny"
unused_self = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_self = "deny"
used_underscore_binding = "deny"
verbose_bit_mask = "deny"
verbose_file_reads = "deny"
zero_sized_map_values = "deny"
